--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
             </div>
         </nav>
         <main>
-
+            <section class="about">
+                <span>Sobre nós</span>
+                <h1>Por que somos diferentes?</h1>
+                <p>Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+            </section>
         </main>
     </body>
 </html>
