--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                    <p>Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
                 </div>
             </section>
+            <section class="jobs-header">
+                <span>Vagas abertas!</span>
+                <h2>Estamos procurando por talentos</h2>
+                <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+                <img src="./assets/images/team.svg" alt="engineering team">
+            </section>
         </main>
     </body>
 </html>
