--- a/index.html
+++ b/index.html
@@ -61,6 +61,49 @@
                 <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
                 <img src="./assets/images/team.svg" alt="engineering team">
             </section>
+            <section class="jobs">
+                <div class="container-job">
+                    <h2>Design</h2>
+                    <div class="jobs-card">
+                        <h3>Product Designer</h3>
+                        <div class="informations">
+                            <p>Full-time</p>
+                            <p>Faixa salarial: R$7.000</p>
+                        </div>
+                    </div>
+                    <div class="jobs-card">
+                        <h3>UX Designer</h3>
+                        <div class="informations">
+                            <p>Full-time</p>
+                            <p>Faixa salarial: R$6.000</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-job">
+                    <h2>Desenvolvimento de Software</h2>
+                    <div class="jobs-card">
+                        <h3>Desenvolvedor(a) iOS</h3>
+                        <div class="informations">
+                            <p>Full-time</p>
+                            <p>Faixa salarial: R$8.000</p>
+                        </div>
+                    </div>
+                    <div class="jobs-card">
+                        <h3>Desenvolvedor(a) Front-end</h3>
+                        <div class="informations">
+                            <p>Full-time</p>
+                            <p>Faixa salarial: R$7.000</p>
+                        </div>
+                    </div>
+                    <div class="jobs-card">
+                        <h3>Desenvolvedor(a) Back-end</h3>
+                        <div class="informations">
+                            <p>Full-time</p>
+                            <p>Faixa salarial: R$8.000</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
