--- a/index.html
+++ b/index.html
@@ -104,6 +104,26 @@
                     </div>
                 </div>
             </section>
+            <section class="testimonial">
+                <div class="container__testimonial">
+                    <p>Veja o que nossos colaboradores falam sobre nós</p>
+                    <h2>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
+                    <img src="./assets/images/avatar-testimonial.svg" alt="testimonial avatar">
+                    <h4>Júlia Castro</h4>
+                    <span>Desenvolvedora Web</span>
+                </div>
+            </section>
+            <section class="newsletter">
+                <div class="container__newsletter">
+                    <h2>Acompanhe as nossas oportunidades</h2>
+                    <span>Seja o primeiro a saber quando novas vagas serão abertas!</span>
+                    <div class="joinNewsletter">
+                        <input placeholder="Seu e-mail" type="email" required>
+                        <button>Cadastrar</button>
+                    </div>
+                    <p>© 2022 OptimusTech. Todos os direitos reservados.</p>
+                </div>
+            </section>
         </main>
     </body>
 </html>
